<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="horizontal" >
    <ImageView
        android:id="@+id/iv_personHead"
        android:layout_width="80dp"
   		android:layout_height="80dp"
   		android:src="@drawable/liimg"
   		android:scaleType="fitCenter"
   		android:layout_marginRight="10dp"
   		android:layout_marginLeft="10dp"
   		android:layout_gravity="center_vertical|left"
        />
        
	<LinearLayout
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:orientation="vertical" >

	    <TextView 
	        android:id="@+id/tv_personName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/personinfo"
	        android:textColor="@color/black"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:paddingBottom="5dp"
	        />
	    <LinearLayout
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginTop="5dp"
		    android:paddingBottom="10dp"
	    >
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/black"
		        android:text="@string/signature"
		        />
		    <TextView 
		        android:id="@+id/tv_sign"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textColor="@color/black"
		        android:singleLine="false"
		        android:text="@string/hello_world"
		        android:maxLines="2"
		        android:ellipsize="end"
		        />
	    </LinearLayout>
	  
	   
	</LinearLayout>
</LinearLayout>
	<ImageView  
        android:layout_width="fill_parent"  
        android:layout_height="1dp"  
        android:background="@drawable/divide" /> 
</LinearLayout>