<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@color/white"
    android:orientation="vertical" >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <ImageView
        android:id="@+id/lesson_img"
     	android:layout_width="80dp"
   	 	android:layout_height="80dp"
   	 	android:layout_gravity="center_vertical"
   	 	android:layout_marginLeft="5dp"
   	 	android:src="@drawable/list_img" 
   	 	android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/lesson_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/hello_world"
            android:textColor="@color/black"
            android:textSize="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/views_count" />

            <TextView
                android:id="@+id/look_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/hot_lever" />

                <RatingBar
                    android:id="@+id/lesson_rate"
                    style="@style/MyRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rating="3.50" 
                    android:numStars="5"
                    android:isIndicator="true"
                    android:layout_marginTop="3dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lesson_ly_play"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Look"
                    android:textColor="@color/black" />

                <ImageButton
                    android:id="@+id/ibtn_play"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="5dp"
                    android:focusable="false"
                    android:background="@drawable/play" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

	</LinearLayout>
	<ImageView  
        android:layout_width="fill_parent"  
        android:layout_height="1dp"  
        android:layout_marginTop="5dp"
        android:background="@drawable/divide" /> 
</LinearLayout>