<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <!-- 头部标题 -->
   <LinearLayout 
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:gravity="center_vertical"
      android:background="@color/black"
      android:orientation="horizontal"
      >  
       
      <ImageButton 
          android:id="@+id/btn_back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="15dip"
          android:src="@drawable/fanhui"  
         android:scaleType="fitCenter"
          android:background="@color/transparent"
          
          />
    
      <TextView 
          android:layout_width="wrap_content"
           
          android:layout_height="35dp"
          android:layout_weight="1"
         android:text="@string/exam"
         android:textColor="@color/white"
         android:gravity="center"
        android:textSize="20sp"
          />
      
      <View       
         
          android:layout_width="35dip"
          android:layout_height="30dip"
        
         android:layout_marginRight="15dip"
          />
      
      
  </LinearLayout>
        <!-- 标题结束 -->
        <!-- 内容 -->
        <LinearLayout 
             android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_marginTop="20dp"
            >
   <TextView 
       android:id="@+id/tv_question"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/exam_question"
       android:textColor="@color/black"
       android:textSize="14sp"
       android:layout_marginLeft="5dp"
       /> 
       <RadioGroup 
           android:id="@+id/rg_answers"
           android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:orientation="vertical"
        android:paddingLeft="20dp"
           >
           <RadioButton 
               android:id="@+id/rb_answer1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
      android:textColor="@color/black"
    android:button="@drawable/exam_radio_select"
       android:text="@string/exam_answer"
       android:layout_marginTop="10dp"
       
               />
           
           <RadioButton 
                android:id="@+id/rb_answer2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
      android:textColor="@color/black"
      android:button="@drawable/exam_radio_select"
       android:text="@string/exam_answer"
        android:layout_marginTop="10dp"
               />
           <RadioButton 
                android:id="@+id/rb_answer3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
      android:textColor="@color/black"
      android:button="@drawable/exam_radio_select"
       android:text="@string/exam_answer"
        android:layout_marginTop="10dp"
               />
           <RadioButton 
         android:id="@+id/rb_answer4"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
      android:textColor="@color/black"
      android:button="@drawable/exam_radio_select"
       android:text="@string/exam_answer"
        android:layout_marginTop="10dp"
               />
           
       </RadioGroup>
<LinearLayout 
    android:layout_width="match_parent"
       android:layout_height="match_parent" 
       android:orientation="horizontal"
       android:gravity="bottom"
    >
    <ImageButton 
        android:id="@+id/imgbtn_reset"
        android:layout_width="80dp"
       android:layout_height="50dp" 
       android:scaleType="fitCenter"
       android:src="@drawable/btremu"
       android:layout_marginLeft="30dp"
        android:layout_marginBottom="5dp"
       android:background="@color/transparent"
        />
    <LinearLayout 
         android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="right"
        >
    <ImageButton 
        android:id="@+id/imgbtn_reset"
         android:layout_width="80dp"
       android:layout_height="50dp" 
       android:src="@drawable/btnin"      
       android:scaleType="fitCenter"
       android:layout_marginRight="30dp"
       android:layout_marginBottom="5dp"
       android:background="@color/transparent"
        />
    </LinearLayout>
</LinearLayout>

</LinearLayout>
</LinearLayout>